--- a/kube/ingress.yaml
+++ b/kube/ingress.yaml
@@ -3,8 +3,8 @@ kind: Ingress
 metadata:
   name: ledger-ingress
   namespace: ledger
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  # annotations:
+    # nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
   - host: localhost
@@ -17,3 +17,10 @@ spec:
             name: user-service-port
             port:
               number: 4000
+      - path: /transactions
+        pathType: Prefix
+        backend:
+          service:
+            name: transaction-service-port
+            port:
+              number: 4001
