--- a/transactions/deployment.yaml
+++ b/transactions/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: transactions-service-container
-        image: alazcano255/transactions-service:v0.1
+        image: alazcano255/transactions-service:latest
         ports:
         - containerPort: 4001
         env:
