--- a/user/deployment.yaml
+++ b/user/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: user-service-container
-        image: alazcano255/user-service:v0.2
+        image: alazcano255/user-service:latest
         ports:
         - containerPort: 4000
         env:
